<resources>
    <string name="app_name">Base64</string>

    <!-- Encodings -->
    <string name="encoding_base64">Base64</string>
    <string name="encoding_base64_url">Base64 URL</string>
    <string name="encoding_base32">Base32</string>
    <string name="encoding_base32_hex">Base32 Hex</string>
    <string name="encoding_base16">Base16</string>

    <!-- Settings -->
    <string name="setting_omit_padding">Omit padding</string>
    <string name="setting_ignore_case">Ignore case for decoding</string>
    <string name="setting_case_standard">Standard case</string>
    <string name="setting_case_lower">Lowercase</string>
    <string name="setting_case_upper">Uppercase</string>

    <!-- Messages -->
    <string name="msg_enter_text">Enter text</string>
    <string name="msg_text_copied">Copied to clipboard.</string>

    <!-- Buttons -->
    <string name="btn_encode">Encode</string>
    <string name="btn_decode">Decode</string>

    <!-- Menus -->
    <string name="menu_copy">Copy</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_clear_all">Clear all</string>
    <string name="menu_share_text">Share text</string>
    <string name="menu_share_app">Share app</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
</resources>