<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_copy"
        android:icon="@drawable/content_copy"
        android:showAsAction="ifRoom"
        android:title="@string/menu_copy" />
    <item
        android:id="@+id/menu_paste"
        android:icon="@drawable/content_paste"
        android:showAsAction="ifRoom"
        android:title="@string/menu_paste" />
    <item
        android:id="@+id/menu_clear"
        android:icon="@drawable/delete_sweep"
        android:showAsAction="ifRoom"
        android:title="@string/menu_clear_all" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/encoding_base64"
            android:title="@string/encoding_base64" />
        <item
            android:id="@+id/encoding_base64_url"
            android:title="@string/encoding_base64_url" />
        <item
            android:id="@+id/encoding_base32"
            android:title="@string/encoding_base32" />
        <item
            android:id="@+id/encoding_base32_hex"
            android:title="@string/encoding_base32_hex" />
        <item
            android:id="@+id/encoding_base16"
            android:title="@string/encoding_base16" />
    </group>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings">
        <menu>
            <item
                android:id="@+id/setting_omit_padding"
                android:checkable="true"
                android:title="@string/setting_omit_padding" />

            <item
                android:id="@+id/setting_ignore_case"
                android:checkable="true"
                android:title="@string/setting_ignore_case" />

            <group
                android:id="@+id/setting_cases"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/setting_case_standard"
                    android:checked="true"
                    android:title="@string/setting_case_standard" />
                <item
                    android:id="@+id/setting_case_lower"
                    android:title="@string/setting_case_lower" />
                <item
                    android:id="@+id/setting_case_upper"
                    android:title="@string/setting_case_upper" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_share_text"
        android:title="@string/menu_share_text" />
    <item
        android:id="@+id/menu_share_app"
        android:title="@string/menu_share_app" />
    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help" />

</menu>