<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <EditText
            android:autoLink="all"
            android:id="@+id/edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="null"
            android:background="@android:color/transparent"
            android:gravity="start"
            android:hint="@string/msg_enter_text"
            android:inputType="textMultiLine"
            android:padding="20dp" />
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="6dp"
        android:paddingEnd="10dp">

        <Button
            android:id="@+id/btnEncode"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:text="@string/btn_encode"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnDecode"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:text="@string/btn_decode"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>